# urine-color-analysis

./: .env  .env.template  .gitignore  CLAUDE.md  README.md  calibration.py  color_analysis.py  config.py  grid.py  grid_config.json  hardware.py  image_processing.py  main.py  network.py  pyproject.toml  requirements-pi.txt  settings.yaml  telegram_bot.py  utils.py  web_server.py
app/: client_app.py  server_app.py
app/shared/: config.py  processor.py
app/web/static/: settings.js
app/web/templates/: dashboard.html  layout.html  settings.html  test.html  trays.html  trend.html  upload.html
bot/: telegram_bot.py
configs/: camera_params.yaml  config.py  config.toml  setup_db.sql
docs/: sheet_headers.txt
models/: unet.py
models/bottle_yolo26s_openvino_model/: best.xml  metadata.yaml
models/bottle_yolo8s_openvino/: best.xml  metadata.yaml
scripts/: export_model.py  setup-pi.sh  setup-server.sh  urine-pi.service  urine-server.service
server/: api.py  pipeline.py  slot_config.json  slot_config.py
server/integrations/: drive.py  sheets.py  sqlite_backup.py
server/static/fonts/: noto-sans-thai.css
server/static/js/: settings.js
server/templates/: auto_grid.html  base.html  result.html  results.html  settings.html  upload.html
table/: a.txt
templates/: analysis.html  base.html  calibrate.html  dashboard.html  global.css  wifi_connecting.html  wifi_setup.html
tests/: test_color_analysis.py  test_grid.py  test_image_processing.py  test_web.py  test_yolo_detect.py
tests/templates/: test_ui.html
utils/: auto_grid_detector.py  calibration.py  camera_undistort.py  color_analysis.py  db.py  grid.py  grid_circle_detector.py  grid_detector.py  hardware.py  image_processing.py  network.py  utils.py  web_server.py  yolo_detector.py
