[project]
name = "urine-color-analysis"
version = "0.2.0"
description = "Automated urine color analysis system — Raspberry Pi client + Ubuntu server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
common = [
    "requests",
    "python-dotenv",
    "pydantic-settings>=2.0",
    "loguru",
    "numpy",
    "pyyaml",
]
pi = [
    # Hardware packages only available on Raspberry Pi (ARM Linux).
    # Platform markers prevent uv from resolving these on x86_64 / macOS.
    "picamera2>=0.3.12       ; sys_platform == 'linux' and platform_machine in ('aarch64', 'armv7l')",
    "RPi.GPIO>=0.7.1         ; sys_platform == 'linux' and platform_machine in ('aarch64', 'armv7l')",
    "raspberrypi-tm1637      ; sys_platform == 'linux' and platform_machine in ('aarch64', 'armv7l')",
    "rpi-lcd                 ; sys_platform == 'linux' and platform_machine in ('aarch64', 'armv7l')",
    "smbus2>=0.4.3           ; sys_platform == 'linux' and platform_machine in ('aarch64', 'armv7l')",
    "psutil>=5.9",
]
server = [
    "fastapi",
    "uvicorn[standard]",
    "openvino",
    "opencv-python",
    "sqlalchemy",
    "jinja2",
    "python-multipart",
    "ultralytics>=8.4.24",
    "psutil>=5.9",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
urine-analyzer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
